force-app/main/default/objects/LoyaltyProgramMember/fields/Account_RH_Certifications__c.field-meta.xml
<CustomField>
    <fullName>Account_RH_Certifications__c</fullName>
    <description>Count of Red Hat Technical Certifications held by the partner account. Used as the Equivalency Path credential for the Build module.</description>
    <label>Account RH Certifications</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>