force-app/main/default/objects/LoyaltyProgramMember/fields/Account_RHSC_Credentials__c.field-meta.xml
<CustomField>
    <fullName>Account_RHSC_Credentials__c</fullName>
    <description>Count of Red Hat Seller Credentials held by the partner account. Used in the standard credential path evaluation.</description>
    <label>Account RHSC Credentials</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>