force-app/main/default/objects/LoyaltyProgramMember/fields/Account_RHTSC_Credentials__c.field-meta.xml
<CustomField>
    <fullName>Account_RHTSC_Credentials__c</fullName>
    <description>Count of Red Hat Technical Seller Credentials held by the partner account. Used in the standard credential path evaluation.</description>
    <label>Account RHTSC Credentials</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>