force-app/main/default/objects/LoyaltyProgramMember/fields/Account_Software_Product_Cert__c.field-meta.xml
<CustomField>
    <fullName>Account_Software_Product_Cert__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Count of Software Product Certifications held by the partner account. Used as Build module Path A equivalency credential. Synced from external Red Hat credential system.</description>
    <label>Account Software Product Certifications</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>