force-app/main/default/objects/LoyaltyProgramMember/fields/Build_Certify__c.field-meta.xml
<CustomField>
    <fullName>Build_Certify__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the partner is enrolled in the Build/Certify module.</description>
    <label>Build / Certify</label>
    <type>Checkbox</type>
</CustomField>