force-app/main/default/objects/LoyaltyProgramMember/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the partner is enrolled in the Distributor module.</description>
    <label>Distributor</label>
    <type>Checkbox</type>
</CustomField>