force-app/main/default/objects/LoyaltyProgramMember/fields/Reseller__c.field-meta.xml
<CustomField>
    <fullName>Reseller__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the partner is enrolled in the Reseller module.</description>
    <label>Reseller</label>
    <type>Checkbox</type>
</CustomField>