force-app/main/default/objects/LoyaltyProgramMember/fields/Sell_With__c.field-meta.xml
<CustomField>
    <fullName>Sell_With__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the partner is enrolled in the Sell-With module.</description>
    <label>Sell With</label>
    <type>Checkbox</type>
</CustomField>